--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -290,8 +290,8 @@
                             </div>
                             
 
-                            @* <div class="d-flex mb-4">
-                                <div class="form-group me-2" style="width: 48%;">
+                            <div class=" mb-4">
+                                <div class="form-group me-2" >
                                     <label>Department Manager</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
                                     <select class="form-select" asp-for="Report.DeptManagerId"    id="DeptManagerId" name="DeptManagerId" >
                                        
@@ -306,7 +306,7 @@
                                     </select>
                                 </div>
 
-                                <div class="form-group ms-2" style="width: 48%;">
+                                @* <div class="form-group ms-2" style="width: 48%;">
                                     <label>Supervisor</label>
                                     <select asp-for="Report.SupervisorId"  class="form-select" id="SupervisorId" name="SupervisorId" >
                                         <option value="">Select General Supervisor</option>
@@ -321,9 +321,9 @@
 
                                     </select>
                                     
-                                </div>
+                                </div> *@
 
-                            </div> *@
+                            </div>
                         <div class="col-lg-12 col-sm-12">
                             
                             <div id="returnEntriesWrapper">
