--- a/Pages/Disbursements.cshtml
+++ b/Pages/Disbursements.cshtml
@@ -604,8 +604,8 @@ document.addEventListener("DOMContentLoaded", function () {
                                 <input type="hidden" value="@Model.ToDate?.ToString("yyyy-MM-dd")" name="ToDate" />
                                 <!-- Variables for Breadcrumb Ends -->
 
-                                <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
-                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" />
+                                @* <input type="submit" value="@Model.lblEdit" class="btn btn-secondary" asp-page-handler="Edit" />
+                                <input type="submit" value="@Model.lblView" class="btn btn-secondary" asp-page-handler="View" /> *@
                             </form>
                         </td>
                     </tr>
