--- a/Pages/AddDisbursement.cshtml
+++ b/Pages/AddDisbursement.cshtml
@@ -157,6 +157,43 @@
 
     // --- Init All Existing Entries on Load ---
     wrapper.querySelectorAll(".return-entry").forEach(initializeEntry);
+
+    
+        //filling related inputs
+
+  document.addEventListener("DOMContentLoaded", function () {
+    const itemCount = @Model.ItemsForReport.Count;
+
+    for (let i = 0; i < itemCount; i++) {
+        const itemGroup = document.getElementById("itemGroup_" + i);
+        const itemCode = document.getElementById("ItemCode_" + i);
+        const itemDescription = document.getElementById("ItemDescription_" + i);
+        const unitInput = document.getElementById("typeofAsset_" + i);
+        const chemicalInput = document.getElementById("chemical_" + i);
+
+        const itemDropdown = document.getElementById("EnglishArabicName_" + i);
+
+        if (itemDropdown) {
+            const selectedOption = itemDropdown.options[itemDropdown.selectedIndex];
+            if (selectedOption && selectedOption.value) {
+                const groupCode = selectedOption.getAttribute("data-group");
+                const code = selectedOption.getAttribute("data-code");
+                const description = selectedOption.getAttribute("data-description");
+                const chemical = selectedOption.getAttribute("data-chemical");
+                const unit = selectedOption.getAttribute("data-unit");
+
+                if (itemCode) itemCode.value = code || '';
+                if (itemDescription) itemDescription.value = description || '';
+                if (unitInput) unitInput.value = unit || '';
+                if (chemicalInput) chemicalInput.value = chemical || '';
+                if (itemGroup) itemGroup.value = groupCode || '';
+            }
+        }
+    }
+});
+
+
+
 </script>
 }
 @{
@@ -325,14 +362,14 @@
 
                             </div>
                         <div class="col-lg-12 col-sm-12">
-                            
+                            @for(int i =0; i < Model.ItemsForReport.Count; i++){
                             <div id="returnEntriesWrapper">
                                
                                 <div class="return-entry border p-3 mb-3 rounded position-relative">
                                     <div class="d-flex my-4">
                                         <div class=" me-2" style="width: 49%;">
                                             <label for="itemGroup">@Model.lblItemGroups</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <select class="form-select" id="itemGroup" name="ItemsForReport[0].ItemGroup" onchange="filterItemsByGroup()">
+                                            <select class="form-select" id="itemGroup_@i" name="ItemsForReport[@i].ItemGroup" onchange="filterItemsByGroup()">
                                                 @if (Model.ItemGroups != null)
                                                 {
                                                     <option value="">Select Item Group</option>
@@ -345,7 +382,7 @@
                                         </div>
                                         <div class="ms-2" style="width: 49%;">
                                             <label for="itemCode">@Model.lblItemCode</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <input type="text" class="ItemCode form-control" id="ItemCode" readonly >
+                                            <input type="text" class="ItemCode form-control" id="ItemCode_@i" readonly >
                                         </div>
 
                                       
@@ -355,7 +392,7 @@
                                     <div class="d-flex">
                                         <div class="form-group  me-2 " style="width: 49%;">
                                             <label>@Model.lblItemName (@Model.lblArabicLanguage)</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <select class="ArabicItemName form-select" id="ArabicItemName"  asp-for="@Model.ItemsForReport[0].ItemCardId" name="ItemsForReport[0].ItemCardId" onchange="onItemChange(this, 'EnglishArabicName')">
+                                            <select class="ArabicItemName form-select" id="ArabicItemName_@i"  asp-for="@Model.ItemsForReport[@i].ItemCardId" name="ItemsForReport[@i].ItemCardId" onchange="onItemChange(this, 'EnglishArabicName')">
                                                 <option value="">Select Item </option>
                                                 @foreach (var item in Model.ItemCards)
                                                 {
@@ -367,7 +404,7 @@
                                                             data-description="@item.ItemDescription"
                                                             data-chemical="@item.Chemical" data-risk="@item.HazardTypeName"
                                                             data-unit="@item.UnitOfmeasure" 
-                                                            >
+                                                             selected="@(Model.ItemsForReport[i].ItemCardId == item.Id)">
                                                             @item.ItemName
                                                         </option>
                                                     
@@ -377,7 +414,7 @@
                                        
                                         <div class="form-group mb-4 ms-2" style="width: 49%;">
                                             <label for="EnglishArabicName">@Model.lblItemName (@Model.lblEnglishLanguage)</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <select class="EnglishArabicName form-select" id="EnglishArabicName"  onchange="onItemChange(this, 'ArabicItemName')">
+                                            <select class="EnglishArabicName form-select" id="EnglishArabicName_@i"  onchange="onItemChange(this, 'ArabicItemName')">
                                                 <option value="">Select Item </option>
                                                 @foreach (var item in Model.ItemCards)
                                                 {
@@ -387,7 +424,8 @@
                                                         data-code="@item.ItemCode"
                                                         data-description="@item.ItemDescription"
                                                         data-chemical="@item.Chemical" data-risk="@item.HazardTypeName"
-                                                        data-unit="@item.UnitOfmeasure" 
+                                                        data-unit="@item.UnitOfmeasure"
+                                                         selected="@(Model.ItemsForReport[i].ItemCardId == item.Id)" 
                                                         >
                                                         @item.ItemName
                                                     </option>
@@ -401,28 +439,28 @@
                                    
                                     <div class="mb-4">
                                         <label for="itemDescription">@Model.lblItemDescription</label>
-                                        <input type="text" class="ItemDescription form-control" id="ItemDescription" readonly>
+                                        <input type="text" class="ItemDescription form-control" id="ItemDescription_@i" readonly>
                                     </div>
 
                                     <div class="d-flex">
                                         <div class="mb-4 me-2" style="width: 49%;">
                                             <label for="typeofAsset">@Model.lblTypeofAsset</label>
-                                            <input type="text" class="typeofAsset form-control" id="typeofAsset" readonly>
+                                            <input type="text" class="typeofAsset form-control" id="typeofAsset_@i" readonly>
                                         </div>
                                         <div class="mb-4 ms-2" style="width: 49%;">
                                             <label for="chemical">@Model.lblChemical</label>
-                                            <input type="text" class="chemical form-control" id="chemical" readonly>
+                                            <input type="text" class="chemical form-control" id="chemical_@i" readonly>
                                         </div>
                                     </div>
                                     
                                     <div class="d-flex">
                                         <div class="mb-4 me-2" style="width: 49%;">
                                             <label for="RiskRating">@Model.lblRiskRating</label>
-                                            <input type="text" class="RiskRating form-control" id="RiskRating" readonly>
+                                            <input type="text" class="RiskRating form-control" id="RiskRating_@i" readonly>
                                         </div>
                                         <div class="mb-4 ms-2" style="width: 49%;">
                                             <label for="UnitofMeasure">@Model.lblUnitOfMeasure</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <input type="text" class="UnitofMeasure form-control" id="UnitofMeasure" readonly>
+                                            <input type="text" class="UnitofMeasure form-control" id="UnitofMeasure_@i" readonly>
                                         </div>
 
                                     </div>
@@ -430,34 +468,37 @@
                                     <div class="d-flex">
                                         <div class="mb-4 me-2" style="width: 49%;">
                                             <label for="Quantity">@Model.lblQuantity</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <input type="text" name="ItemsForReport[0].Quantity" asp-for="ItemsForReport[0].Quantity"  class="form-control Quantity" id="Quantity">
+                                            <input type="number" name="ItemsForReport[@i].Quantity" asp-for="ItemsForReport[@i].Quantity"  class="form-control Quantity" id="Quantity_@i">
                                         </div>
                                         <div class="mb-4 ms-2" style="width: 49%;">
                                             <label for="amountSpent">@Model.lblAmountSpent</label>
-                                            <input type="text" asp-for="ItemsForReport[0].AmountSpent" name="ItemsForReport[0].AmountSpent" value="" class="form-control" id="AmountSpent">
+                                            <input type="number" asp-for="ItemsForReport[@i].AmountSpent" name="ItemsForReport[@i].AmountSpent" value="" class="form-control" id="AmountSpent_@i">
                                         </div>
                                     </div>
                                     
                                     <div class="d-flex">
                                         <div class="mb-4 me-2" style="width: 49%;">
                                             <label for="UnitPrice">@Model.lblUnitPrice</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <input type="text" asp-for="ItemsForReport[0].UnitPrice" name="ItemsForReport[0].UnitPrice" class="form-control UnitPrice" id="UnitPrice">
+                                            <input type="number" asp-for="ItemsForReport[@i].UnitPrice" name="ItemsForReport[@i].UnitPrice" class="form-control UnitPrice" id="UnitPrice_@i">
                                         </div>
                                         <div class="mb-4 ms-2" style="width: 49%;">
                                             <label for="TotalPrice">@Model.lblTotalPrice</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
-                                            <input type="text" asp-for="ItemsForReport[0].TotalPrice" name="ItemsForReport[0].TotalPrice" class="form-control TotalPrice" id="TotalPrice">
+                                            <input type="number" asp-for="ItemsForReport[@i].TotalPrice" name="ItemsForReport[@i].TotalPrice" class="form-control TotalPrice" id="TotalPrice_@i">
                                         </div>
                                     </div>
+                                    <input type="hidden" id="EntryCount" name="EntryCount" value="@Model.ItemsForReport.Count" />
+
                                     
                                     <div class="mb-4">
                                         <label for="Comments">@Model.lblComments</label>
-                                        <input type="text" class="form-control" id="Comments" asp-for="ItemsForReport[0].Comments" name="ItemsForReport[0].Comments"  />
+                                        <input type="text" class="form-control" id="Comments_@i" asp-for="ItemsForReport[@i].Comments" name="ItemsForReport[@i].Comments"  />
                                     </div>
                                     <button type="button" class="btn btn-danger btn-sm remove-entry me-3" style="position: absolute; top: 0; right: 0;">
                                         @Model.lblRemove
                                     </button>
                                 </div>
                             </div>
+                            }
                             <div class="mb-3">
                                 <button type="button" class="btn btn-primary" id="addEntryBtn">@Model.lblAddMore</button>
                             </div
