--- a/Pages/ItemCards.cshtml
+++ b/Pages/ItemCards.cshtml
@@ -132,7 +132,11 @@
                     <div class="form-group" style="width: 48%;">
                         <label asp-for="ItemCard.StoreId" class="control-label">Warehouse Name</label>
                         @* <input type="text" asp-for="ItemCard.StoreId" class="form-control"/> *@
-                        <select asp-for="ItemCard.StoreId" id="storeSelect" name="StoreId" class="form-control" asp-items="ViewBag.WarehouseId" readonly></select>
+                        @* <select asp-for="ItemCard.StoreId" id="storeSelect" name="StoreId" class="form-control" asp-items="ViewBag.WarehouseId" readonly></select> *@
+                        <select asp-for="ItemCard.StoreId" id="storeSelect" class="form-control"
+                            asp-items="ViewBag.WarehouseId" readonly></select>
+                        <input type="hidden" name="StoreId" value="@Model.ItemCard.StoreId" style="display: none;" />
+
                     </div>
 
                     <div class="form-group" style="width: 48%;">
@@ -260,8 +264,29 @@
    @using System.Text.Json
 
     <script>
+        function filterShelfByRoom() {
+            var roomId = document.getElementById("RoomId").value;
+        fetch(`/ItemCards?handler=ShelvesByRoom&roomId=${roomId}`)
+                .then(response => response.json())
+                .then(data => {
+                    var shelfSelect = document.getElementById("ShelfId");
+                    shelfSelect.innerHTML = '<option value="">Select Shelf</option>';
+                    data.forEach(shelf => {
+                        var option = document.createElement("option");
+                        option.value = shelf.value;
+                        option.text = shelf.text;
+                        shelfSelect.appendChild(option);
+                    });
+                });
+        }
+    </script>
+
+    <script>
 
          document.getElementById('storeSelect').addEventListener('mousedown', function (e) {
+        e.preventDefault();
+    });
+         document.getElementById('SupplierId').addEventListener('mousedown', function (e) {
         e.preventDefault();
     });
         const itemData = @Html.Raw(JsonSerializer.Serialize(Model.AllItemsDto));
