--- a/Pages/ManageRooms.cshtml
+++ b/Pages/ManageRooms.cshtml
@@ -251,6 +251,7 @@
                                             <input type="hidden" value="@item.RoomId" name="RoomId" />
                                             <input type="hidden" value="@Model.CurrentPage" name="page" />
                                             <input type="hidden" value="@Model.RoomName" name="RoomName" />
+                                            <input type="hidden" value="@item.StoreId" name="StoreId" />
                                             <input type="submit" value="@Model.lblEdit" class="btn btn-secondary"
                                                    asp-page-handler="Edit" />
                                             <input type="submit" value="@Model.lblDelete" class="btn btn-danger"
