--- a/Pages/DeductOrder.cshtml
+++ b/Pages/DeductOrder.cshtml
@@ -1,4 +1,201 @@
 ﻿@page
 @model LabMaterials.Pages.DeductOrderModel
 @{
+    ViewData["Title"] = "Deduct From Item Card";
+}
+
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center py-4 pb-2">
+    <div class="d-block mb-4 mb-md-0">
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb bg-transparent p-2 mb-0">
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/home.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/Home" class="text-decoration-none">@Model.lblHome</a>
+                </li>
+                    
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
+                    <a href="/ManageItemCards" class="text-decoration-none"> @Model.lblItemCards</a>
+                       
+                </li>
+
+                <li class="breadcrumb-item d-flex align-items-center">
+                    <img src="images/inventory.png" alt="Home" width="16" height="16" class="me-2" />
+                       @Model.lbldeductItemCard
+                </li>
+                    
+            </ol>
+        </nav>
+        <h2 class="h4"> @Model.lbldeductItemCard</h2>
+    </div>       
+</div>
+
+<div class="row">
+    <div class="col-12 mb-4 m-auto">
+        <div class="card border-0 shadow components-section p-3">
+            <form method="post">
+                <div class="form-group mb-4" >
+                    <label  class="control-label">Warehouse Name</label>
+                    @* <input type="text" asp-for="ItemCard.StoreId" class="form-control"/> *@
+                    <select  asp-for="MaterialRequest.WarehouseName" id="storeSelect" name="StoreId" class="form-control" asp-items="ViewBag.WarehouseId" readonly></select>
+                </div>
+
+                @for (int i = 0; i < Model.ItemCardsFromReport.Count; i++)
+                {
+                    var item = Model.ItemCardsFromReport[i];
+                    <div class="card mb-4 p-3 ">
+                            <h4>Item @(i + 1)</h4>
+                            <input  asp-for="@Model.ItemCardsFromReport[i].ItemId" class="form-control" hidden />
+                            <div class="d-flex justify-content-between">
+                                <div class="form-group w-23">
+                                    <label>Item Group</label>
+                                    <input asp-for="@Model.ItemCardsFromReport[i].GroupCode"  class="form-control" readonly />
+                                </div>
+
+                                <div class="form-group w-23">
+                                    <label>Item Code</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                                    <input asp-for="@Model.ItemCardsFromReport[i].ItemCode" class="form-control" readonly />
+                                </div>
+                            
+                                <div class="form-group w-23">
+                                    <label>Item Name(Arabic)</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                                    <input asp-for="@Model.ItemCardsFromReport[i].ItemName" class="form-control" readonly />
+                                </div>
+
+                                <div class="form-group w-23">
+                                    <label>Item Name(English)</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>
+                                    <input asp-for="@Model.ItemCardsFromReport[i].ItemName"  class="form-control" readonly />
+                                </div>
+                                @* <div class="form-group w-23">
+                                    <label>Item Type Code</label> <span class="@(Model.IsMajesticUser() ? "majestic" : "text-white")">*</span>  
+                                    <input asp-for="@Model.ItemCardsFromReport[i].ItemTypeCode" class="form-control" readonly />
+                                </div> *@
+                                <input class="form-control" asp-for="@Model.ItemCardsFromReport[i].ItemTypeCode" type="hidden" />
+                            </div>
+                        
+                            <div class="form-group">
+                                <label>Description</label>
+                                <textarea  class="form-control" asp-for="@Model.ItemCardsFromReport[i].ItemDescription"  readonly></textarea>
+                            </div>
+                            
+                            <div class="d-flex justify-content-between">
+
+                                <div class="form-group w-23">
+                                    <label>Unit of Measure</label>
+                                    <input class="form-control" asp-for="@Model.ItemCardsFromReport[i].UnitOfmeasure"  readonly />
+                                </div>
+
+                                <div class="form-group w-23">
+                                    <label>Chemical</label>
+                                    <input  class="form-control" asp-for="@Model.ItemCardsFromReport[i].Chemical" readonly />
+                                </div>
+
+                                <div class="form-group w-23">
+                                    <label>Risk Rating</label>
+                                    <input asp-for="@Model.ItemCardsFromReport[i].HazardTypeName" class="form-control" readonly/>
+                                </div>
+                                <div class="form-group w-23">
+                                    <label>Expiry Date</label>
+                                    <input type="date" class="form-control" asp-for="@Model.ItemCardsFromReport[i].ExpiryDate"  />
+                                </div>
+                            </div>
+
+                            <div class="d-flex justify-content-between">
+
+                                <div class="form-group w-23">
+                                    <label >TypeOfAsset</label>
+                                    <select class="form-control" asp-for="@Model.ItemCardsFromReport[i].TypeOfAsset">
+                                        <option value="">Select asset type</option>
+                                        <option value="Sustainable">Sustainable</option>
+                                        <option value="Consumable">Consumable</option>
+
+                                    </select>
+                                </div>
+                                <div class="form-group w-23">
+                                    <label >Room Number</label>
+                                    @if(Model.Rooms != null){
+                                        <select class="form-control" >
+                                            <option>Select Room by number</option>
+                                            @foreach(var r in Model.Rooms){
+                                                <option value="r.RoomId">@r.RoomNo</option>
+                                            }
+                                        </select>
+
+                                    }
+                                </div>
+
+                                <div class="form-group w-23">
+                                    <label >Room Name</label>
+                                    @if(Model.Rooms != null){
+                                        <select class="form-control" >
+                                            <option>Select Room</option>
+                                            @foreach(var r in Model.Rooms){
+                                                <option value="r.RoomId">@r.RoomName</option>
+                                            }
+                                        </select>
+
+                                    }
+                                   
+                                </div>
+
+                                <div class="form-group w-23">
+                                    <label>Shelf No.</label>
+                                    <input class="form-control ceiling-output"
+                                        type="number"
+                                        
+                                        />
+                                </div>
+                            </div>
+
+                            <div class="form-group w-23">
+                                <label>Amount Spent</label>
+                                <input class="form-control ceiling-output"
+                                        type="number"/>
+                            </div>
+                    </div>
+                }
+
+                <div class="d-flex justify-content-between">
+                    <div class="form-group " style="width: 48%;">
+                        <label>Out Of Warehouse Date</label>
+                        <input type="date" class="form-control"  />
+                    </div>
+
+                    <div class="form-group " style="width: 48%;">
+                        <label>Party</label>
+                        <select asp-for="MaterialRequest.WarehouseName" name="party" id="party" class="form-control" asp-items="ViewBag.Destinations" readonly>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="d-flex justify-content-between">
+                    <div class="form-group " style="width: 48%;">
+                        <label>Dispensing DocumentType Number</label>
+                        <input type="text" asp-for="MaterialRequest.DocumentNumber" class="form-control" readonly />
+                    </div>
+
+                </div>
+
+
+                <button type="submit" class="btn btn-primary">Create</button>
+                <a asp-page="./Requests" class="btn btn-secondary">Cancel</a>
+            </form>
+        </div>
+    </div>
+</div>
+
+@section Scripts{
+
+    <partial name="_ValidationScriptsPartial" />
+
+    <script>
+        document.getElementById('storeSelect').addEventListener('mousedown', function (e) {
+         e.preventDefault();
+        });
+
+        document.getElementById('party').addEventListener('mousedown', function (e) {
+         e.preventDefault();
+        });
+    </script>
+        
 }
